php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #12124 Cannot compile...
Submitted: 2001-07-12 23:01 UTC Modified: 2001-08-01 09:35 UTC
From: Brett at Zamora dot com Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4.0.4 OS:
Private report: No CVE-ID: None
 [2001-07-12 23:01 UTC] Brett at Zamora dot com
I ran the following configure...

./configure --with-mysql --with-imap --with-ldap --with-mcrypt --with-apache=../apache_1.3.12 --enable-track-vars

Then ran the make and I am getting the following errors...
(See end of log)...

[root@fs1 php-3.0.16]# ./configure --with-mysql --with-imap --with-ldap --with-mcrypt --with-apache=../apache_1.3.12 --enable-track-vars
loading cache ./config.cache
checking whether build environment is sane... yes
checking whether to enable maintainer-specific portions of Makefiles... no
checking for bison... (cached) bison -y
checking bison version... 1.28 (ok)
checking for gcc... (cached) gcc
checking whether the C compiler (gcc  ) works... yes
checking whether the C compiler (gcc  ) is a cross-compiler... no
checking whether we are using GNU C... (cached) yes
checking whether gcc accepts -g... (cached) yes
checking for gcc option to accept ANSI C... (cached) none needed
checking for ranlib... (cached) ranlib
checking whether gcc and cc understand -c and -o together... (cached) yes
checking whether ln -s works... (cached) yes
checking for perl... (cached) /usr/bin/perl
checking for sh... (cached) /bin/sh
checking for working const... (cached) yes
checking if compiler supports -R... (cached) no
checking if compiler supports -Wl,-rpath,... (cached) yes
checking if compiler supports -Wl,--version-script... (cached) yes
checking size of long... (cached) 4
checking size of int... (cached) 4
checking for sendmail... (cached) /usr/lib/sendmail
checking for gethostent... (cached) yes
checking for socket in -lc... (cached) yes
checking for gethostbyaddr in -lc... (cached) yes
checking for crypt in -lc... (cached) no
checking for crypt in -lcrypt... (cached) yes
checking for dlopen in -lc... (cached) no
checking for dlopen in -ldl... (cached) yes
checking for sin in -lc... (cached) no
checking for sin in -lm... (cached) yes
checking for res_search in -lsocket... (cached) no
checking for res_search in -lresolv... (cached) yes
checking for pam_start in -lpam... (cached) yes
checking for inet_aton in -lbind... (cached) no
checking how to run the C preprocessor... (cached) gcc -E
checking for ANSI C header files... (cached) yes
checking for dirent.h that defines DIR... (cached) yes
checking for opendir in -ldir... (cached) no
checking for fclose declaration... ok
checking for fcntl.h... (cached) yes
checking for unistd.h... (cached) yes
checking for crypt.h... (cached) yes
checking for sys/file.h... (cached) yes
checking for memory.h... (cached) yes
checking for pwd.h... (cached) yes
checking for grp.h... (cached) yes
checking for sys/socket.h... (cached) yes
checking for sys/wait.h... (cached) yes
checking for syslog.h... (cached) yes
checking for string.h... (cached) yes
checking for sys/varargs.h... (cached) no
checking for stdarg.h... (cached) yes
checking for sys/resource.h... (cached) yes
checking for sys/time.h... (cached) yes
checking for signal.h... (cached) yes
checking for netinet/in.h... (cached) yes
checking for dlfcn.h... (cached) yes
checking for limits.h... (cached) yes
checking for sys/types.h... (cached) yes
checking for sys/statvfs.h... (cached) yes
checking for sys/statfs.h... (cached) yes
checking for unix.h... (cached) no
checking for db.h... (cached) yes
checking for dbm.h... (cached) no
checking for ndbm.h... (cached) no
checking for db1/ndbm.h... (cached) yes
checking for locale.h... (cached) yes
checking for features.h... (cached) yes
checking whether struct tm is in sys/time.h or time.h... (cached) time.h
checking for tm_zone in struct tm... (cached) yes
checking for tm_gmtoff in struct tm... (cached) yes
checking for struct flock... yes
checking for st_blksize in struct stat... (cached) yes
checking for st_blocks in struct stat... (cached) yes
checking for st_rdev in struct stat... (cached) yes
checking for size_t... (cached) yes
checking for uid_t in sys/types.h... (cached) yes
checking for uint... (cached) yes
checking for ushort... (cached) yes
checking for ulong... (cached) yes
checking for ptrdiff_t... (cached) yes
checking for vprintf... (cached) yes
checking for memcpy... (cached) yes
checking for memmove... (cached) yes
checking for strdup... (cached) yes
checking for strerror... (cached) yes
checking for strcasecmp... (cached) yes
checking for strstr... (cached) yes
checking for flock... (cached) yes
checking for lockf... (cached) yes
checking for putenv... (cached) yes
checking for tempnam... (cached) yes
checking for usleep... (cached) yes
checking for setlocale... (cached) yes
checking for gettimeofday... (cached) yes
checking for setvbuf... (cached) yes
checking for srand48... (cached) yes
checking for lrand48... (cached) yes
checking for srandom... (cached) yes
checking for random... (cached) yes
checking for link... (cached) yes
checking for symlink... (cached) yes
checking for regcomp... (cached) yes
checking for getlogin... (cached) yes
checking for cuserid... (cached) yes
checking for vsnprintf... (cached) yes
checking for gcvt... (cached) yes
checking for utime... (cached) yes
checking for crypt... (cached) yes
checking for setitimer... (cached) yes
checking for rint... (cached) yes
checking for unsetenv... (cached) yes
checking for strftime... (cached) yes
checking for setsockopt... (cached) yes
checking for tzset... (cached) yes
checking for statvfs... (cached) yes
checking for statfs... (cached) yes
checking for inet_aton... (cached) yes
checking for shutdown... (cached) yes
checking for truncate... (cached) yes
checking for getpgid... (cached) yes
checking for getsid... (cached) yes
checking for getrlimit... (cached) yes
checking for snprintf... (cached) yes
checking for ctermid... (cached) yes
checking for setsid... (cached) yes
checking for mkfifo... (cached) yes
checking for getrusage... (cached) yes
checking whether utime accepts a null argument... (cached) yes
checking for working alloca.h... (cached) yes
checking for alloca... (cached) yes
checking for broken sprintf... ok
checking for getopt... (cached) yes
checking for declared timezone... (cached) yes
checking for standard DES crypt... yes
checking for extended DES crypt... no
checking for MD5 crypt... yes
checking for Blowfish crypt... no
checking for Apache module support via DSO through APXS... no
checking whether to enable versioning... no
checking for Apache module support... yes - Apache 1.3.x
checking whether to use bundled regex library... yes
checking for gdbm_open in -lgdbm... (cached) yes
checking preferred dbm library... gdbm chosen
checking for gdbm.h... (cached) yes
checking for mod_charset compatibility option... no
checking for fhttpd module support... no
checking for IMAP support... yes
checking for IMSP support... no
checking for ASPELL support... no
checking for MCAL support... no
checking for ftp support... no
checking for gdImageLine in -lgd... (cached) yes
checking for compress in -lz... (cached) yes
checking for png_info_init in -lpng... (cached) yes
checking for gdImageCreateFromPng in -lgd... (cached) no
checking for gdImageCreateFromJpeg in -lgd... (cached) no
checking for gdImageCreateFromGif in -lgd... (cached) yes
checking for gdImageLzw in -lgd... (cached) no
checking for gdImageColorResolve in -lgd... (cached) no
checking for gdImageString16 in -lgd... (cached) yes
checking whether to include GD support... yes
checking whether to include FreeType support... yes
checking whether to enable t1lib support... no
checking whether to include GNU gettext support... no
checking whether to include ImageMagick support... no
checking for Oracle support... no
checking for iODBC support... no
checking for OpenLink ODBC support... no
checking for Adabas support... no
checking for Sybase support... no
checking for Sybase-CT support... no
checking for MySQL support... yes
checking for errmsg.h... (cached) yes
checking for mysql.h... (cached) yes
checking for mSQL support... no
checking for PostgresSQL support... no
checking for IBM DB2 support... no
checking for Solid support... no
checking for Empress support... no
checking for LDAP support... yes
checking for Cybercash MCK support... no
checking for SNMP support... no
checking whether to enable UCD SNMP hack... no
checking for Velocis support... no
checking for Informix support... no
checking for InterBase support... no
checking for a custom ODBC support... no
checking for Hyperwave support... no
checking for XML support... no
checking whether to include YP support... no
checking whether to include zlib support... no
checking whether to include pdflib support... no
checking whether to include cpdflib support... no
checking whether to include fdftk support... no
checking whether to include the bundled dbase library... no
checking whether to include the bundled filePro support... no
checking whether to enable DAV support through mod_dav... no
checking whether to enable unified ODBC support... no
checking whether to use a configuration file... yes
checking whether to include debugging symbols... no
checking whether to enable safe mode by default... no
checking for safe mode exec dir... /usr/local/php/bin
checking whether to enable track_vars variables by default... yes
checking whether to enable magic quotes by default... no
checking whether to enable remote debugger support... no
checking whether to enable bc style precision math functions... yes
checking whether to enable a memory limit... no
checking whether to enable short tags by default... yes
checking whether to enable the URL-aware fopen wrapper... yes
checking whether to enable System V semaphore support... no
checking whether to enable System V shared memory support... no
checking whether to enable displaying source support... yes
checking for GDBM support... no
checking for NDBM support... no
checking for Berkeley DB2 support... no
checking for DBM support... no
checking for CDB support... no
checking whether to enable DBA interface... no
checking for mcrypt support... yes
checking for mhash support... no
checking whether to include PCRE support... yes
checking for memmove... (cached) yes
checking whether to include POSIX support... yes
checking whether to include GNU recode support... no
checking whether to enable dmalloc support... no
checking for __dn_skipname in -lbind... (cached) no
creating ./config.status
creating Makefile
creating build-defs.h
creating stamp-h
creating libphp3.module
creating extra/gd/bdf2gdfont
creating regex/Makefile
creating pcrelib/Makefile
creating dbase/Makefile
creating config.h
config.h is unchanged
[root@fs1 php-3.0.16]# make
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c main.c -o main.o
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c functions/adabasd.c -o functions/adabasd.o
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c functions/aspell.c -o functions/aspell.o
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c functions/fsock.c -o functions/fsock.o
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c functions/mail.c -o functions/mail.o
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c functions/mysql.c -o functions/mysql.o
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c functions/pgsql.c -o functions/pgsql.o
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c functions/solid.c -o functions/solid.o
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c functions/info.c -o functions/info.o
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c functions/bcmath.c -o functions/bcmath.o
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c functions/unified_odbc.c -o functions/unified_odbc.o
gcc -g -O2 -O2   -I. -I.   -I../apache_1.3.12/src/include -I../apache_1.3.12/src/os/unix                  -I/usr/local/include/mysql -I/usr/local/include    -c functions/mcrypt.c -o functions/mcrypt.o
functions/mcrypt.c:120: warning: `MCRYPT_FAILED' redefined
/usr/local/include/mcrypt.h:30: warning: this is the location of the previous definition
functions/mcrypt.c: In function `php_minit_mcrypt':
functions/mcrypt.c:139: `MCRYPT_BLOWFISH_448' undeclared (first use in this function)
functions/mcrypt.c:139: (Each undeclared identifier is reported only once
functions/mcrypt.c:139: for each function it appears in.)
functions/mcrypt.c:140: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:141: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:142: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:143: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:144: `MCRYPT_SAFER_64' undeclared (first use in this function)
functions/mcrypt.c:145: `MCRYPT_SAFER_128' undeclared (first use in this function)
functions/mcrypt.c:146: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:147: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:148: `MCRYPT_RC2_1024' undeclared (first use in this function)
functions/mcrypt.c:149: `MCRYPT_TWOFISH_128' undeclared (first use in this function)
functions/mcrypt.c:150: `MCRYPT_TWOFISH_192' undeclared (first use in this function)
functions/mcrypt.c:151: `MCRYPT_TWOFISH_256' undeclared (first use in this function)
functions/mcrypt.c:152: `MCRYPT_BLOWFISH_128' undeclared (first use in this function)
functions/mcrypt.c:153: `MCRYPT_BLOWFISH_192' undeclared (first use in this function)
functions/mcrypt.c:154: `MCRYPT_BLOWFISH_256' undeclared (first use in this function)
functions/mcrypt.c:155: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:156: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:157: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:158: `MCRYPT_SERPENT_128' undeclared (first use in this function)
functions/mcrypt.c:159: `MCRYPT_SERPENT_192' undeclared (first use in this function)
functions/mcrypt.c:160: `MCRYPT_SERPENT_256' undeclared (first use in this function)
functions/mcrypt.c:161: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:162: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:163: warning: passing arg 3 of `php3_register_long_constant' makes integer from pointer without a cast
functions/mcrypt.c:164: `MCRYPT_RC2_256' undeclared (first use in this function)
functions/mcrypt.c:165: `MCRYPT_RC2_128' undeclared (first use in this function)
functions/mcrypt.c:166: `MCRYPT_RC6_256' undeclared (first use in this function)
functions/mcrypt.c:167: `MCRYPT_IDEA' undeclared (first use in this function)
functions/mcrypt.c:168: `MCRYPT_RC6_128' undeclared (first use in this function)
functions/mcrypt.c:169: `MCRYPT_RC6_192' undeclared (first use in this function)
functions/mcrypt.c:170: `MCRYPT_RC4' undeclared (first use in this function)
functions/mcrypt.c: In function `php3_mcrypt_get_cipher_name':
functions/mcrypt.c:243: warning: assignment makes pointer from integer without a cast
make: *** [functions/mcrypt.o] Error 1
[root@fs1 php-3.0.16]# 

*** It took me the better part of the day to even get mcrypt compiled successfully. I successfully compiled libmcrypt and the hash source, then after working around the problems of mcrypt not compiling because it couldn't find libmcrypt (which libmcrypt installed with the make install!!!!). I finally copied lib files from /usr/local/lib to /usr/lib and mcrypt finally compiled. Now I'm trying to get PHP to compile with mcrypt support and I get the errors I included the log for.

I guess the bottom line question is does this mcrypt stuff even work or is it relatively new, untested, or should I be avoiding using it???

I've never had a problem with any modules, mysql, ldap, imap, apache, php, before. Every time I've downloaded and configured then compiled tested and installed the stuff has worked fine. This mcrypt has been a nightmare. Am I doing something drastically wrong here???

Thanks,

Brett

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2001-07-13 02:47 UTC] derick@php.net
Mcrypt works fine, this kind of error occurs when configure finds the wrong header files for mcrypt.
I suggest you remove all instances of mcrypt (including headerfiles) and install it again from a fresh source (p.e. version 2.4.15).

Derick
 [2001-08-01 09:35 UTC] sniper@php.net
This should be closed. Not a bug.

 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Apr 22 18:00:01 2026 UTC