fix Bug #12124: Phar object cannot be iterated over remove unused variables fix jit file open sprintf calls